--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,25 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+a.delete {
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.3em 0.3em 0;
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:200;
+    color:#FFEEDD;
+    background-color:#4EC4D1;
+    text-align:center;
+    transition: all 0.2s;
+}
+
+a.delete:hover {
+    background-color:#6055D6;
+}
+
 button {
     display:inline-block;
     padding:0.3em 1.2em;
