--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,25 @@ a.delete:hover {
     background-color:#6055D6;
 }
 
+a.add {
+    display:inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.3em 0.3em 0;
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:200;
+    color:rgb(63, 135, 243);
+    background-color:#4EC4D1;
+    text-align:center;
+    transition: all 0.2s;
+}
+
+a.add:hover {
+    background-color:rgb(206, 17, 212);
+}
+
 button {
     display:inline-block;
     padding:0.3em 1.2em;
